--- a/dl4us/lesson0/lesson0_exercise.ipynb
+++ b/dl4us/lesson0/lesson0_exercise.ipynb
@@ -4,24 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson0 機械学習・深層学習のキソ"
+    "# Lời Mở Đầu\n",
+    "---\n",
+    " Đây là một phần tài liệu nằm trong khóa học nhập môn về machine learning chủ yếu cho các engineer đang đi làm. Tài liệu này sử dụng Keras, một library với các API đơn giản xây dựng dựa trên framework TensorFlow và Theano. Tài liệu khá súc tích nên mình sẽ mất khá nhiều thời gian để dịch và chắc chắn sẽ có nhiều sạn, hy vong nhận đc nhiều ý kiến đóng gop của mọi người. Ngoài ra cách sử dụng từ ngữ chắc cũng sẽ khác so với nhiều trang khác mong mọi người thông cảm (đơn giản là mình thấy dịch như vậy xuôi tai hơn)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 目次\n",
-    "* Section1 機械学習の目的と分類\n",
-    "* Section2 機械学習のプロセス\n",
-    "* Section3 機械学習モデルと深層学習\n",
-    "* Section4 MLP (深層学習) の特徴\n",
-    "* Section5 ライブラリ\n",
+    "## Setup Môi trường\n",
+    " Có 2 cách đơn giản để run đc luôn các bài tập thực hành trong tài liệu này là dùng docker hoặc [google laboratory](https://colab.research.google.com/).\n",
+    " \n",
+    "### Dùng Docker\n",
+    "- Cũng khá đơn giản, các bạn chỉ cẩn clone repository này https://github.com/dangnguyenhuu/docker-jupyterlab.git về rồi di chuyển vào trong folder chạy lệnh `docker-compose up --build`\n",
+    "- Sau khi đợi 1 lúc container khởi động xong, mình sẽ thấy có hiển thị log thông báo như dưới:\n",
+    "<br>\n",
+    "<img src=\"figures/docker run.png\" width=50%>\n",
+    "- Ở đây mình sửa dụng jupyter lab, các bạn có thể access vào link đc bôi màu như hình trên để mở ra tài liệu học"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson0 Cơ bản về Mechine Learning (ML) - Deep Learning (DL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mục Lục\n",
+    "* Section1 Mục đích và phân loại ML 機械学習の目的と分類\n",
+    "* Section2 Quy trình làm ML\n",
+    "* Section3 Mô hình ML và DL\n",
+    "* Section4 Đặc trưng của MLP (深層学習) の特徴\n",
+    "* Section5 Library\n",
     "* Section6 MLPにおける教師あり学習\n",
-    "  * 6.1 学習の各ステップ\n",
-    "  * 6.2 データセットと学習\n",
+    "  * 6.1 Các step trainning\n",
+    "  * 6.2 Data set và trainning\n",
     "\n",
-    "※ Lesson0は演習がなく、基礎概念の解説のみです。"
+    "※ Lesson0 sẽ ko có bài thực hành nào, chủ yếu nói sơ qua về các khái niệm"
    ]
   },
   {
@@ -340,9 +364,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
