--- a/dl4us/lesson0/lesson0_exercise_vn.ipynb
+++ b/dl4us/lesson0/lesson0_exercise_vn.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1. Lời Mở Đầu\n",
     "---\n",
-    " Đây là một phần tài liệu nằm trong khóa học nhập môn về machine learning dành cho các engineer. \n",
+    " Đây là một phần tài liệu nằm trong khóa học nhập môn về machine learning dành cho các engineer ddc biên soạn bỏi các giáo sư tại đọc học Tokyo. \n",
     " <br>\n",
     "Tài liệu này sử dụng Keras, một library với các API đơn giản xây dựng dựa trên framework TensorFlow và Theano.\n",
     " <br>\n",
@@ -46,8 +46,8 @@
    "metadata": {},
    "source": [
     "### 1.2.2 Dùng Google Laboratory \n",
-    "(Sẽ update sau)\n",
-    "đại khái là chỉ cần copy folder `dlus` trong [repository](https://github.com/dangnguyenhuu/docker-jupyterlab.git) rồi quảng lên google drive là chạy đc"
+    "**(Sẽ update sau)**\n",
+    "đại khái là chỉ cần copy folder `dlus` trong [repository](https://github.com/dangnguyenhuu/docker-jupyterlab.git) rồi quảng lên google drive là chạy đc (nói chính xác thì phải thêm vài bước setup nữa ^^ )"
    ]
   },
   {
@@ -80,21 +80,24 @@
    "source": [
     "## Section 1: Mục đích và phân loại\n",
     "\n",
-    "**機械学習 (machine learning)**は、人工知能研究の1分野として「人間の学習能力や認知・判別能力を計算機上で再現する」ことを目的としています。\n",
-    "Machine Learning là 1 phần trong công cuộc nghiên cứu trí tuệ nhân tạo, mục đích tái hiện khả năng ``học tập``, ``nhận biết``,``phán đoán`` của con người trên máy tính.\n",
+    "**Machine Learning** là 1 phần trong công cuộc nghiên cứu và phát triển trí tuệ nhân tạo,\n",
+    "</br>\n",
+    "mục đích nhằm tái hiện khả năng ``học tập``, ``nhận biết``,``phán đoán`` của con người trên máy tính.\n",
+    "\n",
     "より直接的には、機械学習では**データに潜む構造・パターンを捉える**ことが大きな目標となります。\n",
     "\n",
-    "この大目標の下、データの扱い方によって機械学習は次の3つに分類されます。\n",
+    "Tùy vào cách sử dụng dữ liệu học, người ta chia Meachine Learning thành 3 loại chính:\n",
     "\n",
     "<ol>\n",
-    "    <li><strong>教師あり学習 (supervised learning)</strong>\n",
-    "    <ol>データは入力と出力からなり、中に潜む入出力関係をモデル化して捉えることで、新しい入力に対して出力を予測することができます。</ol>\n",
+    "    <li><strong>Học có giám sát (Supervised Learning)</strong>\n",
+    "    <ol>Supervised learning là thuật toán dự đoán đầu ra (outcome) của một dữ liệu mới (new input) dựa trên các cặp (input, outcome) đã biết từ trước. Cặp dữ liệu này còn được gọi là (data, label), tức (dữ liệu, nhãn). Supervised learning là nhóm phổ biến nhất trong các thuật toán Machine Learning. **??? WTF** đọc xong chả hiểu gì (^^!. \n",
+    "        </br>データは入力と出力からなり、中に潜む入出力関係をモデル化して捉えることで、新しい入力に対して出力を予測することができます。</ol>\n",
     "    <ol>出力が離散値なら分類、連続値なら回帰と区別することもあります。</ol>\n",
     "    </li>\n",
-    "    <li><strong>教師なし学習 (unsupervised learning)</strong>\n",
+    "    <li><strong>Học không giám sát (unsupervised learning)</strong>\n",
     "    <ol>データには入出力の区別はなく、データ自身の生成構造や分布をモデル化して捉えることで、データの性質を知る上での参考となります。</ol>\n",
     "    </li>\n",
-    "    <li><strong>強化学習 (reinforcement learning)</strong>\n",
+    "    <li><strong>Học tăng cường (reinforcement learning)</strong>\n",
     "    <ol>データは状態・行動・報酬からなり、これらの対応関係をモデル化して捉えることで、報酬を最大化するような行動を特定できます。</ol>\n",
     "    </li>\n",
     "</ol>\n",
