--- a/dl4us/lesson0/lesson0_exercise_vn.ipynb
+++ b/dl4us/lesson0/lesson0_exercise_vn.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Lesson0 Cơ bản về Mechine Learning (ML) - Deep Learning (DL)"
+    "# 2. Lesson 0: Cơ bản về Mechine Learning (ML) - Deep Learning (DL)"
    ]
   },
   {
@@ -88,9 +88,37 @@
     "\n",
     "Tùy vào cách sử dụng dữ liệu học, người ta chia Meachine Learning thành 3 loại chính:\n",
     "\n",
+    "+ ***Học có giám sát (Supervised Learning)*** :\n",
+    "    - Supervised learning là thuật toán dự đoán đầu ra (outcome) của một dữ liệu mới (new input) dựa trên các cặp (input, outcome) đã biết từ trước. Cặp dữ liệu này còn được gọi là (data, label), tức (dữ liệu, nhãn). Supervised learning là nhóm phổ biến nhất trong các thuật toán Machine Learning. \n",
+    "    - **??? WTF** đọc xong chả hiểu gì (^^!!! \n",
+    "    - Để cho dễ hiểu mình xin lấy 1 ví dụ đơn giản như dưới:\n",
+    "        - Chúng ta có 1 tập dữ liệu bao gồm 100 bức ảnh chụp ký tự viết tay, kèm theo chú thích của các bức ảnh đó :\n",
+    "        - <img src=\"figures/2_02.png\" width=3%> - số 2\n",
+    "        - <img src=\"figures/2_03.png\" width=3%> - ko phải số 2\n",
+    "        - <img src=\"figures/2_04.png\" width=3%> - số 2\n",
+    "        - ....\n",
+    "        - <img src=\"figures/2_05.png\" width=3%> - số 2\n",
+    "        - <img src=\"figures/2_02.png\" width=3%> - số 2\n",
+    "        - <img src=\"figures/2_07.png\" width=3%> - ko phải số 2\n",
+    "        - Bây giờ chúng ra có thêm 1 vạn tấm ảnh nữa:\n",
+    "        - <img src=\"figures/2_08.png\" width=3%>\n",
+    "        - <img src=\"figures/2_09.png\" width=3%>\n",
+    "        - ....\n",
+    " \n",
+    "        - Nhưng chưa đc ghi chú thích bức ảnh là này `số 2` hay `ko phải số 2`, và công việc của bạn là phải ghi chú thích cho 1 vạn bức ảnh này (T_T). Nếu chỉ đơn giản làm cho vài bức ảnh thì hoàn toàn ok, bạn có thể làm thủ công mà chả cần suy nghĩ nhiều gì. nhưng với 1 vạn bức ảnh thì sao ah. Con người là động vật thích lười biếng ^^, các tiền bối đi trước đã giải quyết đc vấn đề trên bằng cách dùng phương pháp học có giám sát này. \n",
+    "    - Ở ví dụ trên mỗi bức ảnh chính là 1 dữ liệu input, còn các chú thích đi kèm theo bức ảnh chính là dữ liệu outcome. 1 cặp (ảnh, chú thích) ở ví dụ này chính là 1 cặp (data. label) hay còn gọi là (dữ liệu, nhãn). Cả tập dữ liệu 1000 ảnh đã đc đánh chú thích này chúng ta có thể gọi nó là dữ liệu học (training data). còn 1 vạn dữ liệu chưa đc ghi chú thích ở đây chính là dữ liệu mới (new input). Vấn đề của chúng ta là phải ghi được chú thích cho 1 vạn tấm ảnh này, hay có thể hiểu là dự đoán đầu ra (outcome).\n",
+    "    - mn thấy sao, nếu vẫn chưa hiểu đc nội dung giải thích thì cứ comment, mình sẽ giải thích thêm.\n",
+    "\n",
+    "+ ***Học không giám sát (unsupervised learning)***\n",
+    "    - Trong thuật toán này, chúng ta không biết được outcome hay nhãn mà chỉ có dữ liệu đầu vào. Thuật toán unsupervised learning sẽ dựa vào cấu trúc của dữ liệu để thực hiện một công việc nào đó, ví dụ như phân nhóm (clustering) hoặc giảm số chiều của dữ liệu (dimension reduction) để thuận tiện trong việc lưu trữ và tính toán.\n",
+    "\n",
+    "    - Một cách toán học, Unsupervised learning là khi chúng ta chỉ có dữ liệu vào X mà không biết nhãn Y tương ứng.\n",
+    "\n",
+    "    - Những thuật toán loại này được gọi là Unsupervised learning vì không giống như Supervised learning, chúng ta không biết câu trả lời chính xác cho mỗi dữ liệu đầu vào. Giống như khi ta học, không có thầy cô giáo nào chỉ cho ta biết đó là chữ A hay chữ B. Cụm `không giám sát` được đặt tên theo nghĩa này.\n",
     "<ol>\n",
     "    <li><strong>Học có giám sát (Supervised Learning)</strong>\n",
-    "    <ol>Supervised learning là thuật toán dự đoán đầu ra (outcome) của một dữ liệu mới (new input) dựa trên các cặp (input, outcome) đã biết từ trước. Cặp dữ liệu này còn được gọi là (data, label), tức (dữ liệu, nhãn). Supervised learning là nhóm phổ biến nhất trong các thuật toán Machine Learning. **??? WTF** đọc xong chả hiểu gì (^^!. \n",
+    "    <ol>Supervised learning là thuật toán dự đoán đầu ra (outcome) của một dữ liệu mới (new input) dựa trên các cặp (input, outcome) đã biết từ trước. Cặp dữ liệu này còn được gọi là (data, label), tức (dữ liệu, nhãn). Supervised learning là nhóm phổ biến nhất trong các thuật toán Machine Learning. **??? WTF** đọc xong chả hiểu gì (^^! \n",
+    "        Để cho dễ hiểu mình xin lấy 1 ví dụ như sau:\n",
     "        </br>データは入力と出力からなり、中に潜む入出力関係をモデル化して捉えることで、新しい入力に対して出力を予測することができます。</ol>\n",
     "    <ol>出力が離散値なら分類、連続値なら回帰と区別することもあります。</ol>\n",
     "    </li>\n",
@@ -109,12 +137,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section2 機械学習のプロセス\n",
+    "## Section2 Proccess làm việc với Machine Learning\n",
     "\n",
-    "機械学習を実際に行う際のプロセスを大枠でとらえると、\n",
+    " Chúng ta có thể tóm tắt proccess chính khi khi làm 1 dự án về Machine Learning như sau:  \n",
     "\n",
     "<ol>\n",
-    "    <li><strong>使用するモデルを仮定（モデル構築、モデルパラメータの設定）</strong>\n",
+    "    <li><strong>Lựa chọn mô hình toán học (xây dựng mô hình, set các parameter 築、モデルパラメータの設定）</strong>\n",
     "    <ol>パターンを捉えるための\"型\"がモデルです。よってモデルの良し悪し（データの持つ構造に対して適切か）が結果に大きく影響します。</ol>\n",
     "    </li>\n",
     "    <li><strong>モデルがパターンを見つけられるように学習させる（学習）</strong>\n",
@@ -334,7 +362,7 @@
     "\n",
     "このように正解ラベルも考慮してデータそのものの特性も含めて評価指標を表現することで、よりはっきりと各指標の意味の把握が可能になります。\n",
     "\n",
-    "### 6.2 データセットと学習\n",
+    "### 6.2 Data set và trainning (Dữ liệu và Học)\n",
     "\n",
     "ここまで学習の一連の流れについて解説しましたが、最後に学習におけるデータセットの使い方について説明したいと思います。\n",
     "\n",
@@ -393,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
